# 12-Factor-App

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
12factorapp/: __init__.py  dataset.py  features.py  plots.py
12factorapp/modeling/: predict.py  train.py
_12factorapp/: __init__.py  features.py  plots.py
_12factorapp/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
factor12app/: __init__.py  dataset.py  features.py  plots.py
factor12app/modeling/: predict.py  train.py
src/calculator_api/: main.py
src/calculator_api/api/: routes.py
src/calculator_api/core/: config.py
static/: index.html
tests/: test_data.py  test_routes.py
