[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "factor12app"
version = "0.0.1"
description = "12 Factor App"
authors = [
  { name = "Nishant Ghimire" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.6"


[tool.ruff]
line-length = 99
src = ["factor12app"]
include = ["pyproject.toml", "factor12app/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["_12factorapp"]
force-sort-within-sections = true

